# nmt-with-transformer

./: NMT with Transformers.ipynb  README.md  pyproject.toml
nmt_with_transformer/: config.py  export_translator.py  helper.py  inference.py  main.py  translator.py
nmt_with_transformer/data/: __init__.py  preprocessor.py  reader.py
nmt_with_transformer/model/: __init__.py  attention.py  decoder.py  encoder.py  feed_forward.py  positional_encoding.py  transformer.py
